test/errors/E021.m3
MODULE E021;

VAR a := 1.0;

BEGIN

  a:= FIRST(FLOAT) ; <*ERROR 021*>

END E021.
